...

  return (
    <View>
      <SocialAuthBar />

      <Input
        testID="signInEmail"
        label={t('common:email')}
        control={control}
        name="email"
        defaultValue=""
        autoCapitalize="none"
        autoCompleteType="email"
        autoCorrect={false}
        keyboardType="email-address"
        error={errors?.email?.message}
      />

      <Input
        testID="signInPassword"
        label={t('common:password')}
        control={control}
        name="password"
        defaultValue=""
        secureTextEntry={true}
        textContentType="oneTimeCode"
        clearTextOnFocus={false}
        error={errors?.password?.message}
      />

      <Button
        testID="signInButton"
        title={t('common:signIn')}
        onPress={handleSubmit(props.onSubmit(setError))}
      />
    </View>
  );
};
...
